--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+  </head>
   <h1>n = Rainier's Projects<h1>
   <h1>print(n)<h1>
   <h1>---------------------------------</h1>  
