--- a/STM8S.html
+++ b/STM8S.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	 <head>
+    		<link rel="stylesheet" href="styles.css">
+  	</head>
 	<h1>(Usermade) Manual For STM8S105K4T6</h1>
 	<p>A word of warning: Im writing this as im learning it, because the support is so little, and I want to help others find the correct information on the usage of this board. I am in no way an expert, so what I write may not always be correct. Feel free to contact me with any mistakes at 2005reh@gmail.com</p>
 	<h2>Setting Up Your Board</h2>
