--- a/NSSD.html
+++ b/NSSD.html
@@ -6,7 +6,5 @@
   <h1>
     Not So Sweet Dreams
   <h1>
-  <p>
-    Welcome to a project I have yet to finish! <br> This is a game with themes such as; Neglect, Child abuse, Depression, Death, and much more
-  </p>
+  <p>Welcome to a project I have yet to finish! <br> This is a game with themes such as; Neglect, Child abuse, Depression, Death, and much more</p>
 </html>
